<resources>
    <!-- App Name -->
    <string name="app_name">We Out</string>

    <!-- Event Home Feed Strings -->
    <string name="emptyViewEventHomeFeed">No Upcoming Events!</string>
    <!-- End of Event Home Feed Strings -->

    <!-- Event Creation Strings-->

    <!--Create an Event-->
    <string name="eventCreationActionBar">Create an Event</string>
    <string name="eventCreationTitle">Event Title</string>
    <string name="eventCreationTitleHint">Please enter the title of your event.</string>
    <string name="eventCreationDateTime">Event Date and Time</string>
    <string name="eventCreationDateHint">Date</string>
    <string name="eventCreationTimeHint">Time</string>
    <string name="eventCreationLocation">Event Location</string>
    <string name="eventCreationLocationHint">Please be descriptive!</string>
    <string name="eventCreationDescription">Event Description</string>
    <string name="eventCreationDescriptionHint">What will you and your friends be doing?</string>

    <string name="eventCreationInviteFriendsButton">Invite Friends</string>
    <string name="eventCreationSetDateButton">Set Date</string>
    <string name="eventCreationSetTimeButton">Set Time</string>

    <!--Invite Friends-->
    <string name="inviteFriends_Title">Invite Friends</string>
    <string name="inviteFriends_FinishButton">Finish</string>

    <!--End of Event Creation Strings-->

    <!--Login/Register Screen Strings-->
    <string name="WeOut">𝓦𝓮 𝓞𝓾𝓽</string>
    <string name="SignUp">𝓢𝓲𝓰𝓷 𝓤𝓹</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="emailAddressHint">Email Address</string>
    <string name="emailHint">Username</string>
    <string name="home_Title">We Out</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_retype_password">Retype Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!--End of Login/Register Screen Strings-->

    <!--Friend Screen Strings-->
    <string name="friendTitle">Friend</string>
    <string name="addByUsername">Add By Username</string>
    <string name="addButton">Add</string>
    <string name="profileMainText">Profile</string>
    <string name="emptyViewMyFriends">No Friends!</string>
    <string name="emptyViewFriendRequests">No Friend Requests!</string>

    <!--End of Friend Screen Strings-->

    <!--Event Invitations Strings-->
    <string name="acceptButtonName">Accept</string>
    <string name="rejectButtonName">Decline</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--End of Event Invitations String-->

</resources>
