<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityAddEventFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        tools:context=".MainActivityAddEventFragment"
        android:orientation="vertical"
        android:background="@drawable/weoutbackground"
        android:id="@+id/relativeLayoutEventCreateContainer">

        <androidx.cardview.widget.CardView
            android:id="@+id/createEventCardView"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin25dp"
            android:elevation="200dp"
            card_view:cardCornerRadius="4dp"
            android:scaleY="0"
            android:scaleX="0"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/margin16dp"
                >

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/closescreen"
                    android:layout_alignParentTop="true"
                    android:id="@+id/closeScreenButton"
                    android:background="?attr/selectableItemBackground"
                    android:scaleX="2"
                    android:scaleY="2"
                    android:paddingTop="@dimen/margin10dp"
                    />

                <TextView
                    android:layout_below="@+id/closeScreenButton"
                    android:id="@+id/eventCreationTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin3dp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/eventCreationTitle"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:paddingTop="10dp"
                    android:textSize="30sp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/eventTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/eventCreationTitleTextView"
                    android:theme="@style/CreateEventTextInput">

                    <EditText
                        android:id="@+id/eventCreationTitleEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/eventCreationTitleHint"
                        android:maxLength="75"
                        android:singleLine="true"
                        android:imeOptions="actionDone"/>

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/eventCreationDateTimeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eventCreationDateTime"
                    android:layout_marginLeft="@dimen/margin3dp"
                    android:textStyle="bold"
                    android:paddingTop="10dp"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:layout_below="@+id/eventTitle"
                    />

                <GridLayout
                    android:id="@+id/gridLayoutEventDateTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:columnCount="2"
                    android:rowCount="2"
                    android:orientation="horizontal"
                    android:layout_below="@+id/eventCreationDateTimeTextView"
                    >

                    <TextView
                        android:id="@+id/eventCreationDateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_rowWeight=".75"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill_horizontal"
                        android:paddingVertical="@dimen/margin10dp"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/eventCreationTimeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="1"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight=".75"
                        android:layout_gravity="fill_horizontal"
                        android:paddingVertical="@dimen/margin10dp"
                        android:textSize="20sp"
                        android:textColor="#000000"
                        android:gravity="center"/>

                    <Button
                        android:id="@+id/eventCreationSetDateButton"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:text="@string/eventCreationSetDateButton"
                        android:textAllCaps="false"
                        />

                    <Button
                        android:id="@+id/eventCreationSetTimeButton"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:layout_columnWeight="1"
                        android:text="@string/eventCreationSetTimeButton"
                        android:textAllCaps="false"
                        />

                </GridLayout>

                <TextView
                    android:id="@+id/eventCreationLocationTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin3dp"
                    android:text="@string/eventCreationLocation"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:paddingTop="10dp"
                    android:textSize="30sp"
                    android:layout_below="@+id/gridLayoutEventDateTime"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/eventCreationLocationTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/CreateEventTextInput"
                    android:layout_below="@+id/eventCreationLocationTextView">

                    <EditText
                        android:id="@+id/eventCreationLocationEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/eventCreationLocationHint"
                        android:textColor="@color/black"
                        android:maxLength="75"
                        android:singleLine="true"
                        android:imeOptions="actionDone"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/eventCreationDescriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:text="@string/eventCreationDescription"
                    android:layout_below="@+id/eventCreationLocationTextInput"
                    android:layout_marginLeft="@dimen/margin3dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:paddingTop="10dp"
                    android:textSize="30sp"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/eventCreationDescriptionTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/CreateEventTextInput"
                    android:layout_below="@+id/eventCreationDescriptionTextView"
                    android:layout_above="@+id/eventCreationInviteFriendsButton"
                    >

                    <EditText
                        android:id="@+id/eventCreationDescriptionTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/eventCreationDescriptionHint"
                        android:textColor="@color/black"
                        android:maxLength="150"
                        android:inputType="textMultiLine"
                        android:imeOptions="actionDone"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/eventCreationInviteFriendsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/eventCreationInviteFriendsButton"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:background="@drawable/bluebutton"
                    android:layout_marginBottom="@dimen/margin16dp"
                    android:paddingHorizontal="@dimen/margin10dp"
                    />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</FrameLayout>